--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -110,6 +110,11 @@ a:hover {
     top: 10px;
     right: 20px;
 }
-#login a {
+#login a, #register a {
     color: #1e91ff;
+}
+#register {
+    position: absolute;
+    top: 10px;
+    left: 20px;
 }
