--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -10,7 +10,9 @@ html {
 body {
     background: linear-gradient(0, #EEEEEE 60%, #90A4AE 0%);
 }
-
+pre {
+    display: none;
+}
 main {
     flex-direction: column;
     align-items: center;
