hotfix-1 Added deg suffix to linear gradient

--- a/application/public/css/styles.css
+++ b/application/public/css/styles.css
@@ -8,7 +8,7 @@ html {
     background: #EEEEEE;
 }
 body {
-    background: linear-gradient(0, #EEEEEE 60%, #90A4AE 0%);
+    background: linear-gradient(0deg, #EEEEEE 60%, #90A4AE 0%);
 }
 
 main {
