--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -8,11 +8,9 @@ html {
     background: #EEEEEE;
 }
 body {
-    background: linear-gradient(0, #EEEEEE 60%, #90A4AE 0%);
+    background: linear-gradient(0deg, #EEEEEE 60%, #90A4AE 0%);
 }
-pre {
-    display: none;
-}
+
 main {
     flex-direction: column;
     align-items: center;
